<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"  
            android:stretchColumns="*" >
 <!-- Row 1 with 4 columns -->  
    <TableRow
         android:id="@+id/tableRow1" 
         android:layout_height="wrap_content" 
         android:layout_width="match_parent"
          >
        <TextView android:id="@+id/TextView01" 
            android:background="@drawable/cell_shape"
            android:layout_weight="1"   
            android:gravity="left"
            android:padding="5dip"  
            android:text="@string/flight" 
            android:textColor="#ffffff" />
          <TextView android:id="@+id/TextView02" 
              android:background="@drawable/cell_shape"
              android:text="@string/airline" 
              android:layout_weight="1"  
              android:textColor="#ffffff"  
              android:padding="5dip"  
              android:gravity="left"/>
          <TextView android:id="@+id/TextView03" 
              android:background="@drawable/cell_shape"
              android:text="@string/origin" 
              android:layout_weight="1"  
              android:textColor="#ffffff"  
              android:padding="5dip"  
              android:gravity="left"/>
          <TextView android:id="@+id/TextView04" 
              android:background="@drawable/cell_shape"
              android:text="@string/arrivals" 
              android:layout_weight="1"  
              android:textColor="#ffffff"  
              android:padding="5dip"  
              android:gravity="left"/>
         
    </TableRow>
 <!-- Row 2 with 4 columns -->
     <TableRow
         android:id="@+id/tableRow2"
         android:layout_height="wrap_content"                         
         android:layout_width="match_parent">
         <TextView
             android:id="@+id/TextView05" 
             android:text="@string/SG3598"
             android:layout_weight="1" 
             android:background="@drawable/cell_contentshape"            
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/>
         <TextView
             android:id="@+id/TextView06" 
             android:text="@string/spicejet"
             android:layout_weight="1" 
             android:background="@drawable/cell_contentshape"                              
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/>
         <TextView
             android:id="@+id/TextView07" 
             android:text="@string/chennai"
             android:layout_weight="1" 
             android:background="@drawable/cell_contentshape"             
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/>
         <TextView
             android:id="@+id/TextView08" 
             android:text="@string/arrivaltime1"
             android:layout_weight="1" 
             android:background="@drawable/cell_contentshape"                              
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/>
     </TableRow>
 <!-- Row 2 with 3 columns -->
     <TableRow
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:gravity="center_horizontal">
         <TextView
             android:id="@+id/TextView09" 
             android:text="@string/SG1084"
             android:layout_weight="1"  
             android:background="@drawable/cell_contentshape"
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/> 
         <TextView
             android:id="@+id/TextView10" 
             android:text="@string/spicejet1"
             android:layout_weight="1" 
             android:background="@drawable/cell_contentshape"
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/>
         <TextView
             android:id="@+id/TextView11" 
             android:text="@string/chennai"
             android:layout_weight="1"  
             android:background="@drawable/cell_contentshape"
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/>
         <TextView
             android:id="@+id/TextView12" 
             android:text="@string/arrivaltime2"
             android:layout_weight="1" 
             android:background="@drawable/cell_contentshape"
             android:textColor="#000000"
             android:padding="5dip" 
             android:gravity="left"/>
     </TableRow>
     <TextView
         android:id="@+id/TextView13"
         android:layout_weight="2"
         android:gravity="left"
         android:padding="5dip"
         android:text="@string/arrivaltime"
         android:textColor="#000000"/>
</TableLayout>
